package org.distributed.stumatchdistributed.node;

import io.grpc.stub.StreamObserver;
import org.distributed.stumatchdistributed.virtualdisk.VirtualDisk;
import org.distributed.stumatchdistributed.network.NetworkInterfaceManager;
import org.distributed.stumatchdistributed.network.NetworkInterface;
import org.distributed.stumatchdistributed.process.ProcessManager;
import io.grpc.Server;
import io.grpc.ServerBuilder;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;

import java.io.IOException;
import java.nio.file.Path;
import java.nio.file.Paths;
import java.util.concurrent.TimeUnit;

/**
 * Enhanced Storage Node with:
 * - Virtual Disk (real file system)
 * - Auto IP assignment
 * - Lifecycle management (READY/RUNNING/WAITING/STOPPED/DEAD)
 * - Process management
 * - Sandboxed operation
 *
 * @author Your Name
 * @version 2.0
 */
public class EnhancedStorageNode {
    private static final Logger log = LoggerFactory.getLogger(EnhancedStorageNode.class);

    // Node identity
    private final String nodeId;
    private final int port;

    // Network interface (auto-assigned IP)
    private final NetworkInterface networkInterface;

    // Virtual disk
    private final VirtualDisk virtualDisk;

    // Lifecycle management
    private final NodeLifecycleManager lifecycleManager;

    // Process management
    private final ProcessManager processManager;

    // gRPC server
    private Server server;

    // Node specifications
    private final int storageGB;
    private final int ramGB;
    private final int cpuCores;
    private final long bandwidthBitsPerSecond;

    /**
     * Creates an enhanced storage node.
     */
    private EnhancedStorageNode(Builder builder) throws IOException {
        this.nodeId = builder.nodeId;
        this.port = builder.port;
        this.storageGB = builder.storageGB;
        this.ramGB = builder.ramGB;
        this.cpuCores = builder.cpuCores;
        this.bandwidthBitsPerSecond = builder.bandwidthMbps * 1_000_000L;

        log.info("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—");
        log.info("â•‘  ENHANCED STORAGE NODE INITIALIZATION                  â•‘");
        log.info("â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£");
        log.info("â•‘  Node ID: {}                                    â•‘", String.format("%-40s", nodeId));
        log.info("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");

        // 1. Assign Network Interface (Auto IP)
        log.info("ğŸŒ Step 1: Assigning network interface...");
        this.networkInterface = NetworkInterfaceManager.getInstance().assignInterface(nodeId);
        if (networkInterface == null) {
            throw new IOException("Failed to assign network interface");
        }
        log.info("   âœ… IP Address: {}", networkInterface.getIpAddress());
        log.info("   âœ… MAC Address: {}", networkInterface.getMacAddress());

        // 2. Create Virtual Disk
        log.info("ğŸ’¾ Step 2: Creating virtual disk...");
        Path diskDir = Paths.get(System.getProperty("user.home"), "distributed-storage", "disks");
        this.virtualDisk = new VirtualDisk(nodeId + "-disk", storageGB, diskDir);
        log.info("   âœ… Virtual Disk: {} GB", storageGB);

        // Format the disk
        if (!virtualDisk.isFormatted()) {
            log.info("   ğŸ”§ Formatting virtual disk...");
            virtualDisk.format();
        }

        // Mount the disk
        virtualDisk.mount();
        log.info("   âœ… Disk mounted");

        // 3. Initialize Lifecycle Manager
        log.info("ğŸ”§ Step 3: Initializing lifecycle manager...");
        this.lifecycleManager = new NodeLifecycleManager(nodeId);
        log.info("   âœ… Lifecycle manager ready");

        // 4. Initialize Process Manager
        log.info("âš™ï¸  Step 4: Initializing process manager...");
        this.processManager = new ProcessManager(nodeId, cpuCores);
        log.info("   âœ… Process manager ready ({} cores)", cpuCores);

        log.info("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—");
        log.info("â•‘  âœ… NODE INITIALIZATION COMPLETE                       â•‘");
        log.info("â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£");
        log.info("â•‘  Node ID:     {}                            â•‘", String.format("%-38s", nodeId));
        log.info("â•‘  IP Address:  {}                      â•‘", String.format("%-38s", networkInterface.getIpAddress()));
        log.info("â•‘  Port:        {}                                â•‘", port);
        log.info("â•‘  Storage:     {} GB (Virtual Disk)                 â•‘", storageGB);
        log.info("â•‘  RAM:         {} GB                                  â•‘", ramGB);
        log.info("â•‘  CPU Cores:   {}                                     â•‘", cpuCores);
        log.info("â•‘  Status:      READY                                   â•‘");
        log.info("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");
    }

    /**
     * Starts the node (activates lifecycle, starts gRPC server).
     */
    public void start() throws IOException, InterruptedException {
        log.info("ğŸš€ Starting node: {}", nodeId);

        // Activate lifecycle
        if (!lifecycleManager.activate()) {
            throw new IOException("Failed to activate node lifecycle");
        }

        // Start process manager
        processManager.start();

        // Start gRPC server
        server = ServerBuilder.forPort(port)
                .addService(new EnhancedNodeServiceImpl(this))
                .build()
                .start();

        log.info("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—");
        log.info("â•‘  âœ… NODE STARTED SUCCESSFULLY                          â•‘");
        log.info("â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£");
        log.info("â•‘  Node ID:     {}                            â•‘", String.format("%-38s", nodeId));
        log.info("â•‘  IP:Port:     {}:{}                 â•‘",
                String.format("%-25s", networkInterface.getIpAddress()), port);
        log.info("â•‘  State:       WAITING (Ready for requests)            â•‘");
        log.info("â•‘  Disk:        MOUNTED                                 â•‘");
        log.info("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");

        // Shutdown hook
        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
            log.warn("âš ï¸  Shutting down node {}", nodeId);
            try {
                log.info("oohh no im shutting down node {}", nodeId);
                EnhancedStorageNode.this.stop();
            } catch (InterruptedException e) {
                log.error("Error during shutdown", e);
            }
        }));

        // Block until terminated
        server.awaitTermination();
    }

    /**
     * Stops the node gracefully.
     */
    public void stop() throws InterruptedException {
        log.info("ğŸ›‘ Stopping node, im dying: {}", nodeId);

        // Stop lifecycle
        lifecycleManager.stop();

        // Stop process manager
        processManager.shutdown();

        // Unmount disk
        virtualDisk.unmount();

        // Stop gRPC server
        if (server != null) {
            server.shutdown().awaitTermination(30, TimeUnit.SECONDS);
        }

        // Release network interface
        NetworkInterfaceManager.getInstance().releaseInterface(nodeId);

        log.info("âœ… Node stopped: {}", nodeId);
    }

    /**
     * Stores a chunk using the virtual disk.
     * Submits as a managed process.
     */
    public boolean storeChunk(String chunkId, byte[] data) {
        log.info("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—");
        log.info("â•‘  ğŸ“¥ INCOMING CHUNK STORAGE REQUEST                    â•‘");
        log.info("â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£");
        log.info("â•‘  Node:      {}                               â•‘", String.format("%-40s", nodeId));
        log.info("â•‘  Chunk ID:  {}                     â•‘", String.format("%-40s", chunkId));
        log.info("â•‘  Size:      {}                              â•‘", formatBytes(data.length));
        log.info("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");

        // Submit as a process
        long pid = processManager.submitProcess(
                "StoreChunk-" + chunkId,
                () -> {
                    try {
                        // Simulate transfer time
                        long transferTimeMs = (data.length * 8 * 1000) / bandwidthBitsPerSecond;

                        log.info("â³ Transferring... [          ]   0%");
                        Thread.sleep(transferTimeMs / 4);
                        log.info("â³ Transferring... [â–ˆâ–ˆ        ]  25%");
                        Thread.sleep(transferTimeMs / 4);
                        log.info("â³ Transferring... [â–ˆâ–ˆâ–ˆâ–ˆ      ]  50%");
                        Thread.sleep(transferTimeMs / 4);
                        log.info("â³ Transferring... [â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ   ]  75%");
                        Thread.sleep(transferTimeMs / 4);
                        log.info("â³ Transferring... [â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ] 100%");

                        // Write to virtual disk
                        boolean success = virtualDisk.writeFile(chunkId, data);

                        if (success) {
                            log.info("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—");
                            log.info("â•‘  âœ… CHUNK STORED SUCCESSFULLY                         â•‘");
                            log.info("â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£");
                            log.info("â•‘  Chunk ID:    {}                   â•‘", String.format("%-38s", chunkId));
                            log.info("â•‘  Duration:    {} ms                         â•‘", transferTimeMs);
                            log.info("â•‘  Disk Used:   {}/{} GB                  â•‘",
                                    virtualDisk.getUsedBytes() / (1024*1024*1024),
                                    virtualDisk.getTotalSizeBytes() / (1024*1024*1024));
                            log.info("â•‘  Files:       {}                                  â•‘", virtualDisk.listFiles().size());
                            log.info("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");
                        }

                    } catch (InterruptedException e) {
                        Thread.currentThread().interrupt();
                        log.error("âŒ Transfer interrupted", e);
                    }
                },
                5  // Priority
        );

        log.info("ğŸ“‹ Process submitted (PID: {})", pid);

        return true;
    }

    /**
     * Retrieves a chunk from the virtual disk.
     */
    public byte[] retrieveChunk(String chunkId) {
        log.info("ğŸ“¤ Retrieving chunk: {}", chunkId);
        return virtualDisk.readFile(chunkId);
    }

    /**
     * Gets comprehensive node status.
     */
    public EnhancedNodeStatus getStatus() {
        return new EnhancedNodeStatus(
                nodeId,
                networkInterface.getIpAddress(),
                networkInterface.getMacAddress(),
                port,
                lifecycleManager.getLifecycleInfo(),
                virtualDisk.getStats(),
                processManager.listProcesses(),
                ramGB,
                cpuCores
        );
    }

    private String formatBytes(long bytes) {
        if (bytes < 1024) return bytes + " B";
        if (bytes < 1024 * 1024) return String.format("%.2f KB", bytes / 1024.0);
        if (bytes < 1024L * 1024 * 1024) return String.format("%.2f MB", bytes / (1024.0 * 1024));
        return String.format("%.2f GB", bytes / (1024.0 * 1024 * 1024));
    }

    // Getters
    public String getNodeId() { return nodeId; }
    public NetworkInterface getNetworkInterface() { return networkInterface; }
    public VirtualDisk getVirtualDisk() { return virtualDisk; }
    public NodeLifecycleManager getLifecycleManager() { return lifecycleManager; }
    public ProcessManager getProcessManager() { return processManager; }

    /**
     * Builder pattern.
     */
    public static class Builder {
        private String nodeId;
        private int port;
        private int storageGB = 100;
        private int ramGB = 8;
        private int cpuCores = 4;
        private int bandwidthMbps = 1000;

        public Builder nodeId(String nodeId) {
            this.nodeId = nodeId;
            return this;
        }

        public Builder port(int port) {
            this.port = port;
            return this;
        }

        public Builder storageGB(int storageGB) {
            this.storageGB = storageGB;
            return this;
        }

        public Builder ramGB(int ramGB) {
            this.ramGB = ramGB;
            return this;
        }

        public Builder cpuCores(int cpuCores) {
            this.cpuCores = cpuCores;
            return this;
        }

        public Builder bandwidthMbps(int bandwidthMbps) {
            this.bandwidthMbps = bandwidthMbps;
            return this;
        }

        public EnhancedStorageNode build() throws IOException {
            if (nodeId == null || nodeId.isEmpty()) {
                throw new IllegalStateException("Node ID is required");
            }
            if (port <= 0 || port > 65535) {
                throw new IllegalArgumentException("Invalid port: " + port);
            }

            return new EnhancedStorageNode(this);
        }
    }

    /**
     * Main method - runs node as separate process.
     */
    public static void main(String[] args) {
        if (args.length < 2) {
            System.err.println("Usage: java EnhancedStorageNode <node-id> <port> [storage-gb] [ram-gb]");
            System.exit(1);
        }

        try {
            EnhancedStorageNode node = new EnhancedStorageNode.Builder()
                    .nodeId(args[0])
                    .port(Integer.parseInt(args[1]))
                    .storageGB(args.length > 2 ? Integer.parseInt(args[2]) : 100)
                    .ramGB(args.length > 3 ? Integer.parseInt(args[3]) : 8)
                    .build();

            node.start();

        } catch (Exception e) {
            log.error("Failed to start node", e);
            System.exit(1);
        }
    }
}

// ============================================================================
// Enhanced Node Status (comprehensive info)
// ============================================================================

// ============================================================================
// Enhanced gRPC Service Implementation
// ============================================================================

class EnhancedNodeServiceImpl extends org.distributed.stumatchdistributed.grpc.NodeServiceGrpc.NodeServiceImplBase {
    private final EnhancedStorageNode node;

    EnhancedNodeServiceImpl(EnhancedStorageNode node) {
        this.node = node;
    }

    @Override
    public void storeChunk(org.distributed.stumatchdistributed.grpc.StoreChunkRequest request,
                           StreamObserver<org.distributed.stumatchdistributed.grpc.StoreChunkResponse> responseObserver) {
        String chunkId = request.getChunkId();
        byte[] data = request.getData().toByteArray();

        boolean success = node.storeChunk(chunkId, data);

        org.distributed.stumatchdistributed.grpc.StoreChunkResponse response = org.distributed.stumatchdistributed.grpc.StoreChunkResponse.newBuilder()
                .setSuccess(success)
                .setMessage(success ? "Stored on virtual disk" : "Storage failed")
                .build();

        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void retrieveChunk(org.distributed.stumatchdistributed.grpc.RetrieveChunkRequest request,
                              StreamObserver<org.distributed.stumatchdistributed.grpc.RetrieveChunkResponse> responseObserver) {
        String chunkId = request.getChunkId();
        byte[] data = node.retrieveChunk(chunkId);

        org.distributed.stumatchdistributed.grpc.RetrieveChunkResponse.Builder responseBuilder = org.distributed.stumatchdistributed.grpc.RetrieveChunkResponse.newBuilder();

        if (data != null) {
            responseBuilder.setData(com.google.protobuf.ByteString.copyFrom(data))
                    .setSuccess(true);
        } else {
            responseBuilder.setSuccess(false);
        }

        responseObserver.onNext(responseBuilder.build());
        responseObserver.onCompleted();
    }

    @Override
    public void getStatus(org.distributed.stumatchdistributed.grpc.StatusRequest request,
                          StreamObserver<org.distributed.stumatchdistributed.grpc.StatusResponse> responseObserver) {
        EnhancedNodeStatus status = node.getStatus();

        // Convert to basic StatusResponse (maintain compatibility)
        org.distributed.stumatchdistributed.grpc.StatusResponse response = org.distributed.stumatchdistributed.grpc.StatusResponse.newBuilder()
                .setNodeId(status.getNodeId())
                .setUsedStorage(status.getDiskStats().getUsedBytes())
                .setTotalStorage(status.getDiskStats().getTotalBytes())
                .setNumChunks(status.getDiskStats().getFileCount())
                .setUtilizationPercent(status.getDiskStats().getUtilizationPercent())
                .build();

        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }
}
